Switch to SCSS for styling

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "flexboxgrid": "^6.3.1",
-    "jquery": "2.2.3",
+    "jquery": "^2.2.3",
     "material-ui": "^0.15.4",
     "react": "15.0.2",
     "react-dom": "15.0.2",
@@ -72,15 +72,17 @@
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
+    "node-sass": "^4.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "rimraf": "2.5.2",
+    "sass-loader": "^4.0.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.13.0",
+    "webpack": "^1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0"
   },
