--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "flexboxgrid": "^6.3.1",
     "jquery": "^2.2.3",
     "material-ui": "^0.15.4",
-    "react": "15.0.2",
+    "node-sass": "^4.0.0",
+    "react": "^15.0.2",
     "react-dom": "15.0.2",
     "react-flexbox-grid": "^0.10.2",
     "react-redux": "4.4.5",
