--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "ezabsentee",
   "version": "1.0.0",
@@ -40,6 +39,7 @@
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
+    "react-signature-pad": "0.0.6",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "3.5.2",
     "redux-thunk": "^2.0.1",
