--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "jquery": "^2.2.3",
     "material-ui": "^0.15.4",
     "react": "15.0.2",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "15.0.2",
     "react-flexbox-grid": "^0.10.2",
+    "react-motion": "^0.4.5",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
