Fix payments page

--- a/package.json
+++ b/package.json
@@ -31,19 +31,25 @@
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "flexboxgrid": "^6.3.1",
+    "honorific": "^1.0.2",
     "jquery": "^2.2.3",
     "material-ui": "^0.15.4",
-    "react": "15.0.2",
+    "months": "^1.0.1",
+    "node-sass": "^4.0.0",
+    "react": "^15.0.2",
     "react-dom": "15.0.2",
     "react-flexbox-grid": "^0.10.2",
+    "react-motion": "^0.4.5",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
+    "react-router-transition": "0.0.6",
     "react-signature-pad": "0.0.6",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "3.5.2",
     "redux-thunk": "^2.0.1",
     "toastr": "2.1.2",
+    "united-states": "^2.0.0",
     "uuid": "^2.0.2"
   },
   "devDependencies": {
