--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^15.0.2",
     "react-dom": "15.0.2",
     "react-flexbox-grid": "^0.10.2",
+    "react-icons": "^2.2.1",
     "react-motion": "^0.4.5",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
